kubsexercises/ex10_redispvcpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: ex10-kubsexercise
    type: db
spec:
  containers:
    - name: redis-container
      image: redis:6.2.2
      volumeMounts:
        - name: pvc-volume
          mountPath: /data
  volumes:
    - name: pvc-volume
      persistentVolumeClaim: 
        claimName: redis-pvc
