kubsexercises/ex3_multicontainerpod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: ex3-nginx-redis
  labels:
    app: ex3-kubsexercise
    type: proxyanddb
spec:
  containers:
    - name: ex3-nginx
      image: nginx:1.19.10
    - name: ex3-redis
      image: redis:6.2.2
