kubsexercises/ex12_ingressservice.yaml
apiVersion: v1
kind: Service
metadata: 
  name: web-deploy-service
  labels:
    app: ex12-kubsexercise
    type: service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: ex5-kubsexercise
    type: proxywebserver
