kubsexercises/ex12_ingressresource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdeploy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: wed-deploy-service
                port:
                  number: 30001
